chore: release after install deps

--- a/.github/workflows/gh_release.yml
+++ b/.github/workflows/gh_release.yml
@@ -25,14 +25,6 @@ jobs:
           cache: 'yarn'
           cache-dependency-path: yarn.lock
 
-      - name: Release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          git config --global user.email "team@tracking.exposed"
-          git config --global user.name "Team - Tracking Exposed"
-          yarn release-it --ci --preRelease --preReleaseId=beta
-
       - uses: actions/cache@v2
         with:
           key: build-workspace-${{ github.run_id }}
@@ -47,6 +39,14 @@ jobs:
 
       - name: Install dependencies
         run: yarn
+
+      - name: Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config --global user.email "team@tracking.exposed"
+          git config --global user.name "Team - Tracking Exposed"
+          yarn release-it --ci
 
       - name: YCAI dist
         env:
