feat: embryo of observatory runner

--- a/services/tktrex/automation/assets/TikTok/tt-observatory/config.yaml
+++ b/services/tktrex/automation/assets/TikTok/tt-observatory/config.yaml
@@ -11,7 +11,8 @@ experimentType: tt-observatory
 #
 # Note: this is YAML, not JSON, so you do not need
 # to wrap the string in quotes.
-proxy:
+proxy: some://url
+proxyUser: some_user_[2_CHAR_COUNTRY_CODE]:some_password
 
 # The URL to browse at the beginning of the script,
 # before starting to type the queries.
