--- a/services/tktrex/extension/tsconfig.json
+++ b/services/tktrex/extension/tsconfig.json
@@ -20,6 +20,7 @@
       "@tktrex/*": ["../../shared/src/*"]
     }
   },
+  "include": ["./src"],
   "references": [
     { "path": "../../../packages/shared" },
     { "path": "../shared" }
