--- a/YCAI/package.json
+++ b/YCAI/package.json
@@ -29,11 +29,11 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/bs58": "^4.0.1",
-    "@types/chrome": "0.0.177",
+    "@types/chrome": "^0.0.179",
     "@types/debug": "^4.1.7",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
-    "@types/react": "17.0.38",
+    "@types/react": "17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-test-renderer": "^17.0.1",
     "@types/swagger-ui": "^3.52.0",
@@ -73,7 +73,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@types/c3": "^0.7.8",
-    "@types/lodash": "^4.14.178",
+    "@types/lodash": "^4.14.179",
     "@vx/group": "0.0.199",
     "@vx/hierarchy": "0.0.199",
     "@vx/mock-data": "0.0.199",
