--- a/YCAI/package.json
+++ b/YCAI/package.json
@@ -26,32 +26,32 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "@types/bs58": "^4.0.1",
-    "@types/chrome": "0.0.177",
+    "@types/chrome": "^0.0.179",
     "@types/debug": "^4.1.7",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^16.11.22",
-    "@types/react": "17.0.38",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^16.11.26",
+    "@types/react": "17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-test-renderer": "^17.0.1",
     "@types/swagger-ui": "^3.52.0",
-    "@typescript-eslint/eslint-plugin": "^5.10.2",
-    "@typescript-eslint/parser": "^5.10.2",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
     "buffer": "^6.0.3",
     "conventional-changelog-conventionalcommits": "^4.6.3",
     "css-loader": "^6.6.0",
     "dotenv": "^14.3.2",
-    "eslint": "^8.8.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.4.0",
     "eslint-config-standard-with-typescript": "^21.0.1",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
-    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react": "^7.29.2",
     "husky": "^7.0.4",
-    "jest": "^27.4.7",
+    "jest": "^27.5.1",
     "jest-chrome": "^0.7.2",
     "prettier": "^2.5.1",
     "react-test-renderer": "^17.0.2",
@@ -73,7 +73,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@types/c3": "^0.7.8",
-    "@types/lodash": "^4.14.178",
+    "@types/lodash": "^4.14.179",
     "@vx/group": "0.0.199",
     "@vx/hierarchy": "0.0.199",
     "@vx/mock-data": "0.0.199",
