--- a/.github/workflows/yttrex_pull_request.yml
+++ b/.github/workflows/yttrex_pull_request.yml
@@ -38,7 +38,9 @@ jobs:
         run: yarn yt:ext lint
 
       - name: Build
-        run: yarn yt:ext build
+        run: |
+          yarn shared build
+          yarn yt:ext build
 
       - name: Pack
         run: yarn yt:ext pack
