--- a/platforms/guardoni/package.json
+++ b/platforms/guardoni/package.json
@@ -18,7 +18,10 @@
     "dist:windows": "electron-builder build -w",
     "dist:all": "scripts/dist-all.sh",
     "postinstall": "electron-builder install-app-deps",
-    "prepack": "yarn build"
+    "prepack": "yarn build",
+    "automate:dev": "ts-node ./src/tx-automate/index.ts",
+    "automate": "node dist/index.js",
+    "tdd": "jest --watch --verbose"
   },
   "bin": "./bin/guardoni-cli.js",
   "main": "./build/electron/main.js",
@@ -52,25 +55,34 @@
     "fp-ts": "^2.11.8",
     "io-ts": "^2.2.16",
     "io-ts-types": "^0.5.16",
+    "linkedom": "^0.14.2",
     "lodash": "^4.17.21",
     "nconf": "^0.11.3",
     "node-fetch": "^2.6.7",
+    "pouchdb-find": "^7.2.2",
+    "pouchdb-node": "^7.2.2",
     "puppeteer-core": "^13.4.0",
     "puppeteer-extra": "^3.2.3",
     "puppeteer-extra-plugin-stealth": "^2.9.0",
     "puppeteer-in-electron": "^3.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "unzipper": "^0.10.11",
+    "yaml": "^1.10.2",
     "yargs": "^17.3.1"
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "@types/lodash": "^4.14.179",
     "@types/nconf": "^0.10.1",
+    "@types/pouchdb-find": "^6.3.7",
+    "@types/pouchdb-node": "^6.1.4",
     "@types/prettier": "^2.4.4",
     "@types/react": "17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/unzipper": "^0",
     "@types/webpack-node-externals": "^2.5.3",
+    "@types/yaml": "^1",
     "@types/yargs": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
@@ -90,10 +102,14 @@
     "pkg": "^5.5.2",
     "prettier": "^2.5.1",
     "rpmbuild": "^0.0.23",
+    "string-replace-loader": "^3.1.0",
     "style-loader": "^3.3.1",
     "ts-jest": "^27.1.3",
     "ts-loader": "^9.2.6",
+    "ts-node": "^10.5.0",
+    "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.5",
+    "unlazy-loader": "^0.1.3",
     "utf-8-validate": "^5.0.8",
     "webpack": "^5.69.1",
     "webpack-bundle-analyzer": "^4.5.0",
