ci(workspace): change workflow_call to workflow_dispatch [skip ci]

--- a/.github/workflows/gh_release.yml
+++ b/.github/workflows/gh_release.yml
@@ -1,7 +1,7 @@
 name: TRex - GH Release
 
 on:
-  workflow_call:
+  workflow_dispatch:
     inputs:
       ref:
         description: 'The commit to checkout (on master)'
