ci: guardoni pull request workflow paths

--- a/.github/workflows/guardoni_pull_request.yml
+++ b/.github/workflows/guardoni_pull_request.yml
@@ -11,8 +11,8 @@ on:
       - refactor/**
     paths:
       - "packages/shared/**"
-      - "extension/**"
-      - "guardoni/**"
+      - "platforms/**/extension/**"
+      - "platforms/guardoni/**"
 
 jobs:
   pull_request:
