--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -53,6 +53,7 @@
     "fast-check": "^2.22.0",
     "fast-check-io-ts": "^0.5.0",
     "filemanager-webpack-plugin": "^6.1.7",
+    "jest": "^27.5.1",
     "mini-css-extract-plugin": "^2.5.3",
     "prettier": "^2.5.1",
     "react-refresh": "^0.11.0",
