--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "platforms/tktrex/extension",
     "platforms/tktrex/methodology",
     "platforms/tktrex/backend",
-    "platforms/tktrex/shared"
+    "platforms/tktrex/shared",
+    "platforms/tktrex/observatory"
   ],
   "packageManager": "yarn@3.1.1",
   "scripts": {
