fix(yttrex): use shared extension logic

--- a/platforms/yttrex/extension/tsconfig.json
+++ b/platforms/yttrex/extension/tsconfig.json
@@ -27,12 +27,12 @@
     "moduleResolution": "Node",
     "isolatedModules": true,
     "paths": {
-      "@shared/*": ["../../packages/shared/src/*"]
+      "@shared/*": ["../../../../packages/shared/src/*"]
     }
   },
   "references": [
     {
-      "path": "../packages/shared"
+      "path": "../../../packages/shared"
     }
   ],
   "include": ["./src", "./typings", "./webpack.config.ts"],
