--- a/platforms/yttrex/extension/package.json
+++ b/platforms/yttrex/extension/package.json
@@ -14,9 +14,10 @@
   "scripts": {
     "clean": "rm -rf ./build ./dist",
     "lint": "eslint ./ --quiet",
-    "start": "npm run build:watch:files",
-    "build": "rm -rf ./build && mkdir build && cross-env webpack && cp -r public/* ./build/",
-    "build:watch": "rm -rf ./build && mkdir build && cp -r public/* ./build/ && cross-env webpack -w",
+    "watch": "DOTENV_CONFIG_PATH=.env.development webpack -w",
+    "watch:prod": "webpack -w",
+    "build": "rm -rf ./build && mkdir build && webpack",
+    "build:watch": "rm -rf ./build && mkdir build && webpack -w",
     "dist": "sh pack-extension.sh",
     "dist:guardoni": "sh pack-extension-for-guardoni.sh",
     "test": "jest"
@@ -54,6 +55,7 @@
     "bs58": "^3.1.0",
     "classnames": "^2.3.1",
     "html2canvas": "^1.4.1",
+    "io-ts-types": "^0.5.16",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
