fix: fixup webpack config

--- a/platforms/yttrex/extension/package.json
+++ b/platforms/yttrex/extension/package.json
@@ -28,7 +28,7 @@
     "autoprefixer": "^6.7.7",
     "copy-webpack-plugin": "^9.1.0",
     "cross-env": "^2.0.1",
-    "css-loader": "^6.6.0",
+    "css-loader": "^5.1.1",
     "dotenv": "^14.3.2",
     "eslint": "^8.10.0",
     "eslint-config-standard-with-typescript": "^21.0.1",
@@ -36,9 +36,8 @@
     "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-react": "^7.29.2",
     "glob": "^7.2.0",
-    "mini-css-extract-plugin": "^2.5.3",
-    "postcss-loader": "^0.10.1",
-    "react-transform-hmr": "^1.0.4",
+    "mini-css-extract-plugin": "^2.6.0",
+    "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
