--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -44,7 +44,6 @@
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
     "copy-webpack-plugin": "^9.1.0",
-    "css-loader": "^6.6.0",
     "dotenv-webpack": "^7.1.0",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.4.0",
@@ -57,11 +56,13 @@
     "fast-check-io-ts": "^0.5.0",
     "filemanager-webpack-plugin": "^6.1.7",
     "jest": "^27.5.1",
-    "mini-css-extract-plugin": "^2.5.3",
+    "mini-css-extract-plugin": "^2.6.0",
     "node-loader": "^2.0.0",
+    "node-sass": "^7.0.1",
     "prettier": "^2.5.1",
     "react-refresh": "^0.11.0",
     "react-refresh-typescript": "^2.0.3",
+    "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "type-fest": "^2.11.1",
