--- a/platforms/tktrex/observatory/package.json
+++ b/platforms/tktrex/observatory/package.json
@@ -5,7 +5,8 @@
   "main": "importer.js",
   "scripts": {
     "test": "jest",
-    "tdd": "jest --watchAll"
+    "tdd": "jest --watchAll",
+    "watch": "ts-node src/watcher.ts"
   },
   "author": "",
   "license": "ISC",
@@ -26,6 +27,8 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@types/chokidar": "^2.1.3",
+    "chokidar": "^3.5.3",
     "linkedom": "^0.14.3",
     "safer-eval": "^1.3.6"
   }
