--- a/platforms/tktrex/observatory/package.json
+++ b/platforms/tktrex/observatory/package.json
@@ -30,6 +30,7 @@
     "@types/chokidar": "^2.1.3",
     "chokidar": "^3.5.3",
     "linkedom": "^0.14.3",
+    "mongodb": "^4.4.1",
     "safer-eval": "^1.3.6"
   }
 }
