--- a/platforms/tktrex/observatory/.vscode/settings.json
+++ b/platforms/tktrex/observatory/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "jest.jestCommandLine": "yarn test"
+  "jest.jestCommandLine": "yarn test",
+  "cSpell.words": [
+    "superproxy",
+    "zproxy"
+  ]
 }
