--- a/platforms/tktrex/observatory/package.json
+++ b/platforms/tktrex/observatory/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^27.4.0",
+    "@types/lodash": "^4.14.179",
     "@types/node": "^16.11.22",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
@@ -31,6 +32,7 @@
     "@types/chokidar": "^2.1.3",
     "chokidar": "^3.5.3",
     "linkedom": "^0.14.3",
+    "lodash": "^4.17.21",
     "mongodb": "^4.4.1",
     "safer-eval": "^1.3.6"
   }
