--- a/platforms/yttrex/extension/package.json
+++ b/platforms/yttrex/extension/package.json
@@ -39,7 +39,8 @@
     "mini-css-extract-plugin": "^2.6.0",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
-    "ts-loader": "^9.2.6",
+    "ts-loader": "^9.2.7",
+    "ts-node": "^10.7.0",
     "typescript": "^4.5.5",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.69.1",
@@ -53,7 +54,9 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "bs58": "^3.1.0",
     "classnames": "^2.3.1",
+    "fp-ts": "^2.11.8",
     "html2canvas": "^1.4.1",
+    "io-ts": "^2.2.16",
     "io-ts-types": "^0.5.16",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
