--- a/platforms/yttrex/extension/.env.development
+++ b/platforms/yttrex/extension/.env.development
@@ -1,5 +1,6 @@
 BUNDLE_TARGET=firefox
-API_ROOT=http://localhost:9000
+API_ROOT=http://localhost:9000/api
 WEB_ROOT=http://localhost:1313
 DATA_CONTRIBUTION_ENABLED=true
 FLUSH_INTERVAL=20000
+DEBUG=@trex*
