--- a/platforms/tktrex/observatory/tsconfig.json
+++ b/platforms/tktrex/observatory/tsconfig.json
@@ -14,13 +14,12 @@
     "resolveJsonModule": true,
     "strict": true,
     "skipLibCheck": true,
-    "target": "es2015",
+    "target": "es2015"
   },
   "ts-node": {
     "compilerOptions": {
       "module": "CommonJS"
     }
   },
-  "include": ["**/*.ts", "**/*.js", "**/*.json"],
-  "exclude": ["node_modules", "build"]
+  "include": ["src", "config"]
 }
