chore: added missing DEBUG env var

--- a/platforms/yttrex/extension/.env
+++ b/platforms/yttrex/extension/.env
@@ -2,3 +2,4 @@ API_ROOT=https://youtube.tracking.exposed/api
 WEB_ROOT=https://youtube.tracking.exposed
 DATA_CONTRIBUTION_ENABLED=true
 FLUSH_INTERVAL=10000
+DEBUG=@trex*
