chore: upgrade linkedom@^0.14

--- a/platforms/guardoni/package.json
+++ b/platforms/guardoni/package.json
@@ -78,19 +78,20 @@
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "@types/lodash": "^4.14.179",
-    "@types/nconf": "^0.10.1",
+    "@types/nconf": "^0.10.2",
     "@types/pouchdb-find": "^6.3.7",
     "@types/pouchdb-node": "^6.1.4",
     "@types/prettier": "^2.4.4",
     "@types/react": "17.0.39",
     "@types/react-dom": "^17.0.11",
-    "@types/unzipper": "^0",
+    "@types/unzipper": "^0.10.5",
     "@types/webpack-node-externals": "^2.5.3",
-    "@types/yaml": "^1",
-    "@types/yargs": "^17.0.8",
+    "@types/yaml": "^1.9.7",
+    "@types/yargs": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
     "bufferutil": "^4.0.6",
+    "canvas": "^2.9.0",
     "chalk": "^5.0.0",
     "electron": "16.1.0",
     "electron-builder": "^22.14.13",
@@ -102,6 +103,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
     "jest": "^27.5.1",
+    "node-loader": "^2.0.0",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "pkg": "^5.5.2",
     "prettier": "^2.5.1",
