--- a/platforms/yttrex/extension/package.json
+++ b/platforms/yttrex/extension/package.json
@@ -36,6 +36,11 @@
     "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-react": "^7.29.2",
     "glob": "^7.2.0",
+    "jest": "^27.5.1",
+    "jest-chrome": "^0.7.2",
+    "jest-cli": "^27.5.1",
+    "jest-dev-server": "^6.0.3",
+    "jest-environment-jsdom-global": "^3.0.0",
     "mini-css-extract-plugin": "^2.6.0",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
