enable downlevel iteration in TS

--- a/platforms/tktrex/observatory/tsconfig.json
+++ b/platforms/tktrex/observatory/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../../tsconfig.json",
   "compilerOptions": {
     "allowJs": true,
+    "downlevelIteration": true,
     "noEmit": true,
     "baseUrl": "./src",
     "composite": true,
