feat(tktrex): extended mail subscription and listing

--- a/platforms/tktrex/backend/config/settings.json
+++ b/platforms/tktrex/backend/config/settings.json
@@ -6,7 +6,7 @@
     "metadata": "metadata",
     "full": "full",
     "directives": "directives",
-    "emails": "emails",
+    "emails": "emails2",
     "experiments": "experiments"
   },
 
