--- a/platforms/tktrex/extension/package.json
+++ b/platforms/tktrex/extension/package.json
@@ -8,7 +8,8 @@
     "build:dev": "DEBUG=\"*\" webpack",
     "watch": "DEBUG=\"*\" webpack --watch",
     "watch:prod": "NODE_ENV=production webpack --watch",
-    "clean": "rm -rf build dist"
+    "clean": "rm -rf build dist",
+    "test": "jest"
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
@@ -41,6 +42,7 @@
     "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-react": "^7.29.2",
     "io-ts": "^2.2.16",
+    "jest-environment-jsdom-global": "^3.0.0",
     "typescript": "^4.5.5",
     "webpack": "^5.69.1"
   }
