refactor(yttrex): parsers in ts

--- a/platforms/yttrex/backend/tsconfig.json
+++ b/platforms/yttrex/backend/tsconfig.json
@@ -27,6 +27,9 @@
     "watchDirectory": "useFsEvents",
     "synchronousWatchDirectory": true
   },
+  "ts-node": {
+    "require": ["tsconfig-paths/register"]
+  },
   "references": [
     {
       "path": "../../../packages/shared"
