--- a/platforms/tktrex/backend/tsconfig.json
+++ b/platforms/tktrex/backend/tsconfig.json
@@ -15,12 +15,12 @@
     "skipLibCheck": true,
     "target": "es2015",
     "paths": {
-      "@shared/*": ["../../../shared/src/*"]
+      "@shared/*": ["../../../packges/shared/src/*"]
     }
   },
   "references": [
     {
-      "path": "../../../shared"
+      "path": "../../../packages/shared"
     }
   ],
   "ts-node": {
