--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@types/geoip-lite": "^1.4.1",
     "avenger": "^7.0.1",
     "axios": "^0.24.0",
     "debug": "^4.3.3",
     "fp-ts": "^2.11.8",
+    "geoip-lite": "^1.4.4",
     "io-ts": "^2.2.16",
     "io-ts-types": "^0.5.16",
     "react": "^17.0.2",
