--- a/platforms/tktrex/backend/tsconfig.json
+++ b/platforms/tktrex/backend/tsconfig.json
@@ -15,7 +15,9 @@
     "skipLibCheck": true,
     "target": "es2015",
     "paths": {
-      "@shared/*": ["../../../packges/shared/src/*"]
+      "@shared/*": [
+        "../../../packages/shared/src/*"
+      ]
     }
   },
   "references": [
