--- a/platforms/tktrex/backend/tsconfig.json
+++ b/platforms/tktrex/backend/tsconfig.json
@@ -15,9 +15,7 @@
     "skipLibCheck": true,
     "target": "es2015",
     "paths": {
-      "@shared/*": [
-        "../../../packages/shared/src/*"
-      ]
+      "@shared/*": ["../../../packages/shared/src/*"]
     }
   },
   "references": [
@@ -26,6 +24,7 @@
     }
   ],
   "ts-node": {
+    "require": ["tsconfig-paths/register"],
     "compilerOptions": {
       "module": "CommonJS"
     }
