--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -16,6 +16,7 @@
     "@types/geoip-lite": "^1.4.1",
     "avenger": "^7.0.1",
     "axios": "^0.24.0",
+    "canvas": "^2.9.1",
     "debug": "^4.3.3",
     "fp-ts": "^2.11.8",
     "geoip-lite": "^1.4.4",
@@ -57,6 +58,7 @@
     "filemanager-webpack-plugin": "^6.1.7",
     "jest": "^27.5.1",
     "mini-css-extract-plugin": "^2.5.3",
+    "node-loader": "^2.0.0",
     "prettier": "^2.5.1",
     "react-refresh": "^0.11.0",
     "react-refresh-typescript": "^2.0.3",
