--- a/platforms/guardoni/guardoni.config.json
+++ b/platforms/guardoni/guardoni.config.json
@@ -1,3 +1,4 @@
 {
-  "backend": "http://localhost:9000/api"
+  "backend": "http://localhost:9000/api",
+  "extensionDir": "../yttrex/extension/build"
 }
