--- a/platforms/guardoni/package.json
+++ b/platforms/guardoni/package.json
@@ -72,6 +72,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "unzipper": "^0.10.11",
+    "ws": "^8.5.0",
     "yaml": "^1.10.2",
     "yargs": "^17.3.1"
   },
@@ -86,6 +87,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/unzipper": "^0.10.5",
     "@types/webpack-node-externals": "^2.5.3",
+    "@types/ws": "^8.5.3",
     "@types/yaml": "^1.9.7",
     "@types/yargs": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
@@ -105,19 +107,19 @@
     "jest": "^27.5.1",
     "node-loader": "^2.0.0",
     "node-polyfill-webpack-plugin": "^1.1.4",
-    "pkg": "^5.5.2",
+    "pkg": "^5.6.0",
     "prettier": "^2.5.1",
     "rpmbuild": "^0.0.23",
     "string-replace-loader": "^3.1.0",
     "style-loader": "^3.3.1",
     "ts-jest": "^27.1.3",
-    "ts-loader": "^9.2.7",
+    "ts-loader": "^9.2.8",
     "ts-node": "^10.7.0",
-    "tsconfig-paths": "^3.13.0",
+    "tsconfig-paths": "^3.14.1",
     "typescript": "^4.5.5",
     "unlazy-loader": "^0.1.3",
-    "utf-8-validate": "^5.0.8",
-    "webpack": "^5.69.1",
+    "utf-8-validate": "^5.0.9",
+    "webpack": "^5.71.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
     "webpack-node-externals": "^3.0.0"
