--- a/platforms/ycai/studio/.eslintrc
+++ b/platforms/ycai/studio/.eslintrc
@@ -43,6 +43,7 @@
     "@typescript-eslint/restrict-plus-operands": ["off"],
     "@typescript-eslint/restrict-template-expressions": ["off"],
     "@typescript-eslint/strict-boolean-expressions": ["off"],
-    "react/jsx-key": "off"
+    "react/jsx-key": "off",
+    "@typescript-eslint/no-misused-promises": ["off"]
   }
 }
