fix(yttrex): trimmed .gitignore, added user research questions by @spaghettinucleari

--- a/platforms/yttrex/backend/.gitignore
+++ b/platforms/yttrex/backend/.gitignore
@@ -1,6 +1,7 @@
 # experiments related folders, the first keep .jpeg(s), the second .csv(s)
 thumbnails/*
 experiments/*
+curlfetched/*
 # this it is overriden by 'key' environment variable or --key option
 config/secrets.json
 
