--- a/.github/workflows/tk_pull_request.yml
+++ b/.github/workflows/tk_pull_request.yml
@@ -51,10 +51,10 @@ jobs:
 
       - name: Test platform
         run: |
-          yarn start --env test platforms/tktrex/backend/ecosystem.config.js
+          yarn pm2 start --env test platforms/tktrex/backend/ecosystem.config.js
           # yarn tk:backend test --runInBand --ci
           yarn test tktrex/extension --runInBand --ci
-          yarn stop all
+          yarn pm2 stop all
 
       - name: Build
         run: |
