--- a/.github/workflows/yttrex_pull_request.yml
+++ b/.github/workflows/yttrex_pull_request.yml
@@ -59,8 +59,8 @@ jobs:
 
       - name: Test
         run:
-          yarn start --env test platforms/yttrex/backend/ecosystem.config.js
+          yarn pm2 start --env test platforms/yttrex/backend/ecosystem.config.js
           yarn yt:backend test --runInBand --forceExit --ci
           yarn yt:ext test --runInBand --ci
-          yarn stop all
+          yarn pm2 stop all
 
