--- a/.github/workflows/tk_pull_request.yml
+++ b/.github/workflows/tk_pull_request.yml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Test platform
         run: |
-          yarn pm2 start --env test platforms/tktrex/backend/ecosystem.config.js
+          yarn pm2 start platforms/tktrex/backend/ecosystem.config.js  --env test
           # yarn tk:backend test --runInBand --ci
           yarn test tktrex/extension --runInBand --ci
           yarn pm2 stop all
