--- a/.github/workflows/yttrex_pull_request.yml
+++ b/.github/workflows/yttrex_pull_request.yml
@@ -59,7 +59,7 @@ jobs:
 
       - name: Test
         run: |
-          yarn pm2 start --env test platforms/yttrex/backend/ecosystem.config.js
+          yarn pm2 start platforms/yttrex/backend/ecosystem.config.js  --env test
           yarn yt:backend test --runInBand --forceExit --ci
           yarn yt:ext test --runInBand --ci
           yarn pm2 stop all
