--- a/platforms/guardoni/package.json
+++ b/platforms/guardoni/package.json
@@ -71,6 +71,8 @@
     "puppeteer-in-electron": "^3.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
     "unzipper": "^0.10.11",
     "ws": "^8.5.0",
     "yaml": "^1.10.2",
