--- a/platforms/guardoni/package.json
+++ b/platforms/guardoni/package.json
@@ -44,6 +44,7 @@
   "license": "AGPL-3.0-or-later",
   "homepage": "https://youtube.tracking.exposed/guardoni",
   "dependencies": {
+    "@electron/remote": "^2.0.8",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
@@ -55,6 +56,7 @@
     "electron-log": "^4.4.6",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.0.1",
+    "electron-unhandled": "^4.0.1",
     "extract-zip": "^2.0.1",
     "fp-ts": "^2.11.8",
     "io-ts": "^2.2.16",
